# IkabotAPI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  gunicorn.conf.py  index.html  main.py  pyproject.toml  requirements.txt  run.py  settings.py
.github/workflows/: deployment.yml  test.yml
app/: __init__.py
app/lobby_captcha/: image.py
app/pirates_captcha/: ikapiratesdecaptcha.py
apps/: __init__.py  models.py
apps/decaptcha/: __init__.py  routes.py
apps/decaptcha/lobby_captcha/: image.py
apps/decaptcha/pirates_captcha/: ikapiratesdecaptcha.py
apps/home/: __init__.py  routes.py
apps/templates/home/: index.html
apps/token/: PlaywrightContext.py  SupportedUserAgents.json  TokenGenerator.py  __init__.py  clean_up_driver_processes.py  routes.py
nginx/: app.conf
src/token/: PlaywrightContext.py  TokenGenerator.py  getToken.html  getToken.py
tests/: conftest.py  test_app.py  test_decaptcha_lobby_route.py  test_decaptcha_pirate_route.py  test_decaptcha_route.py  test_deprecated_decaptcha_route.py  test_lobby_decaptcha.py  test_pirates_decaptcha.py  test_playwright_context.py  test_setup_logger.py  test_token_generator.py  test_token_route.py  token_validator.py
tests/integration_tests/: test_app.py
tests/unit_tests/: test_token_generator.py
