[tool.poetry]
name = "ikabot-api"
version = "2.0.0"
description = "API for Ikabot captcha solving and token generation"
authors = ["Ikabot Collective"]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
playwright = "^1.40.0"
fake-useragent = "^1.4.0"
pillow = "^10.0.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
numpy = "^1.24.0"
opencv-python = "^4.8.0.74"
coloredlogs = "^15.0.1"
python-logging-discord-handler = "^0.1.4"
python-dotenv = "^1.0.1"
pydantic = "^2.5.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
pytest-mock = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:app"
